--- a/api/templates/home.html
+++ b/api/templates/home.html
@@ -1,13 +1,10 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>검색 페이지</title>
-</head>
-<body>
-    <h1>네이버 뉴스 검색</h1>
+{% extends "base.html" %}
+
+{% block content %}
+    <h1>{{ heading }}</h1>
     <form action="/search" method="post">
         <input type="text" name="query">
         <button type="submit">검색</button>
     </form>
-</body>
-</html>
+
+{% endblock %}
